@@ -28,7 +28,20 @@
     </scm>
     <properties>
         <java.version>24</java.version>
+        <spring-cloud-azure.version>5.22.0</spring-cloud-azure.version>
+        <web3j-maven-plugin.version>4.13.0</web3j-maven-plugin.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.azure.spring</groupId>
+                <artifactId>spring-cloud-azure-dependencies</artifactId>
+                <version>${spring-cloud-azure.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -126,6 +139,19 @@
             <version>3.17.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>spring-cloud-azure-starter-storage</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.web3j/core -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>4.13.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
@@ -147,6 +173,13 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -156,6 +189,34 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.web3j</groupId>
+                <artifactId>web3j-maven-plugin</artifactId>
+                <version>${web3j-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <soliditySourceFiles>
+                        <directory>src/main/resources/blockchain/smartcontracts/solidity</directory>
+                        <includes>
+                            <include>**/*.sol</include>
+                        </includes>
+                    </soliditySourceFiles>
+
+                    <!-- Carpeta destino para las clases Java generadas -->
+                    <sourceDestination>src/main/java/com/elixirline/service/elixirline_backend/blockchain/smartcontracts/generated</sourceDestination>
+
+                    <!-- Paquete base para las clases generadas -->
+                    <packageName>com.elixirline.service.elixirline_backend.blockchain.smartcontracts.generated</packageName>
                 </configuration>
             </plugin>
         </plugins>
